// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Badge Components - Experimental Enabled Badge Snapshot 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderCurve": "continuous",
        "borderRadius": 24,
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "#F4F5F8",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    ellipsizeMode="tail"
    maxFontSizeMultiplier={1.25}
    numberOfLines={1}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Readex Pro",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "alignSelf": "center",
          "flexShrink": 1,
          "letterSpacing": 0.5,
          "textTransform": "uppercase",
        },
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Test Badge Components Badge Snapshot 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderCurve": "continuous",
        "borderRadius": 24,
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "#F4F5F8",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    ellipsizeMode="tail"
    maxFontSizeMultiplier={1.25}
    numberOfLines={1}
    style={
      [
        {},
        {
          "color": "#555C70",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 16,
        },
        {
          "alignSelf": "center",
          "flexShrink": 1,
          "letterSpacing": 0.5,
          "textTransform": "uppercase",
        },
      ]
    }
  >
    text
  </Text>
</View>
`;
